--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 Scribblings.kra filter=lfs diff=lfs merge=lfs -text
+*.ogg filter=lfs diff=lfs merge=lfs -text
+*.midi filter=lfs diff=lfs merge=lfs -text
+*.mid filter=lfs diff=lfs merge=lfs -text
