--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.midi filter=lfs diff=lfs merge=lfs -text
 *.mid filter=lfs diff=lfs merge=lfs -text
 *.kra filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
